--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-python lybrary to search md5 hashes on web pages
+python library to search md5 hashes on web pages
 based on noukeys reverser (noukeys__at__gmail__dot__com) idea
